[package]
name = "network"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.5.0", features = ["rt", "net", "sync", "macros", "time"] }
tokio-util = { version = "0.6.6", features = ["codec"] }
thiserror = "1.0.24"
bytes = "1.0.1"
log = "0.4.14"
futures = "0.3.14"
rand = { version = "0.7.3", features = ["small_rng"] }
async-trait = "0.1.50"

[dev-dependencies]
bincode = "1.3.3"