[package]
name = "node"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
rand = "0.7.3"
futures = "0.3.15"
log = "0.4.11"
bytes = "1.0.1"
tokio-util = { version = "0.6.2", features= ["codec"] }
clap = "2.33.3"
env_logger = "0.7.1"
bincode = "1.3.1"
anyhow = "1.0.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
model = { path = "../model" }
consensus = { path = "../consensus" }
vertex = { path = "../vertex" }
transaction = { path = "../transaction" }
storage = { path = "../storage" }

[features]
benchmark = ["transaction/benchmark", "vertex/benchmark", "consensus/benchmark"]

[[bin]]
name = "benchmark_client"
path = "src/benchmark_client.rs"
required-features = ["benchmark"]